clusters/vmtlw/infrastructure/apps/uptime-kuma/ingress-uptime.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: uptime-kuma
  name: uptime-kuma-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - uptime.vmtlw.ru
    secretName: tls-secret
  rules:
  - host: uptime.vmtlw.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
